--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "request": "^2.88.2",
+    "spotify-web-api-js": "^1.5.2",
+    "stream": "^0.0.2",
     "typescript": "^4.6.3",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
