--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "request": "^2.88.2",
     "spotify-web-api-js": "^1.5.2",
     "stream": "^0.0.2",
