--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "spotify-viewer",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://evanp23.github.io/Spotify-Viewer",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
