Change homepage in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spotify-viewer",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://evanp23.github.io/Spotify-Viewer",
+  "homepage": "https://www.evanp23.github.io/Spotify-Viewer/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
